--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,9 @@ img {
   justify-content: space-between;
   margin-top: 50px;
 }
+.clients-item:hover .clients-icon,
+.clients-item:active .clients-icon{
+  fill: var(--accent-color);
 .clients-link{
   display: flex;
   padding: 16px 32px;
@@ -375,10 +378,6 @@ img {
   height: 60px;
   width: 106px;
   fill: var(--fill);
-}
-.clients-icon:hover,
-.clients-icon:active{
-  fill: var(--accent-color);
 }
 
 /* footer */
@@ -478,6 +477,9 @@ img {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
+}
+.cardset-link{
+  display: block;
 }
 .cardset-link:hover,
 .cardset-link:active{
