--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ img {
 .clients-item:hover .clients-icon,
 .clients-item:active .clients-icon{
   fill: var(--accent-color);
+}
 .clients-link{
   display: flex;
   padding: 16px 32px;
